Issued PR comments: Moved and renamed MatchIterator to shape.Values.BuildIterator Updated swagger.yml
